2008-09-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_character):
	check the value of auto_margin before calling check_auto_margin

2008-09-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (execute_process, process_subprogram):
	moved the keyboard initialization to process_subprogram

	* avatarsay.c (menu):
	different balloon-size, no viewport anymore
	several other funtions adapted

	* avatarsay.c (ask_manpage):
	fix: clear file buffer

2008-09-08  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (reset_terminal):
	new function
	(escape_sequence, process_subprogram): adapted

	* avatar.c (check_auto_margin):
	new function
	(avt_forward, avt_put_character): adapted
	only automatic linebreaks, when there is something printable

2008-09-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_draw_balloon):
	more work in alignment of the balloon

2008-09-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_set_balloon_width, avt_set_alloon_height):
	balloon is redrawn
	(avt_set_balloon_size): new function

	* avatar.c (avt_draw_balloon):
	more work in alignment of the balloon

2008-08-29  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.h (execute_process):
	using encoding as parameter
	(avatarsay.c): adapted

2008-08-28  Andreas K. Foerster  <info@akfoerster.de>

	* avtmsg.h, avtmsg.c, avtterm.h, avtterm.c:
	new files - split-offs of avatarsay.c
	avatarsay.c: adapted

2008-08-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay:
	reordering code

2008-08-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay:
	new commands: .height, .width, .size, .scrolling

	* avatar.c (avt_set_balloon_width):
	enforce a minimum width

2008-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_initialize): scrollmode not reset here

	* avatar.c (avt_scroll_up):
	scrollmode -1 for really doing nothing

	* avatar.c (calculate_balloonmaxheight):
	new function
